Upped z-index of split handle to fix IE9 bug

--- a/www/style/style.css
+++ b/www/style/style.css
@@ -31,6 +31,7 @@ html, body {
   position: absolute;
   top:0; bottom:0; left: 50%;
   padding: 0 10px 0 10px;
+  z-index: 1000;
 }
 #handle > div {
   border-left: 1px dashed #333;
